--- a/web/static/index.html
+++ b/web/static/index.html
@@ -2,12 +2,12 @@
 <html lang="en" ng-app="lab">
 <head>
   <meta charset="utf-8">
-  <title>dockercon EU 17</title>
+  <title>VMUG NL - UserCON 2019</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="logo"><img src="images/logo.svg" /></div>
+  <div class="logo"><img src="images/nlvmug.png" /></div>
 
 <div class="sentence" ng-controller="LabCtrl">
   <div class="line line1 slide-in">
