--- a/web/static/index.html
+++ b/web/static/index.html
@@ -2,12 +2,12 @@
 <html lang="en" ng-app="lab">
 <head>
   <meta charset="utf-8">
-  <title>VMUG NL - UserCON 2019</title>
+  <title>De Persgroep Publishing</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="logo"><img src="images/nlvmug.png" /></div>
+  <div class="logo"><img src="images/persgroep.png" /></div>
 
 <div class="sentence" ng-controller="LabCtrl">
   <div class="line line1 slide-in">
@@ -38,7 +38,7 @@
   </div>
 </div>
 
-<div class="footer"><img src="images/homes.png" /></div>
+<div class="footer"><img src="images/groepsfoto_2.jpg" /></div>
 </body>
 
 <script src="angular.min.js"></script>
